Actualizaciones de las paginas-Prueba

--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
       <main>
         <section>
           <h2>Bienvenidos a Dulce Sabor</h2>
-          <p>Descubre los mejores pasteles artesanales de la ciudad.</p>
-        </section>
+          <p>En Dulce Sabor, nuestra misión es ofrecerte los pasteles más deliciosos, hechos con amor y los mejores ingredientes. ¡Ven a disfrutar de nuestros sabores únicos!</p>
+       </section>
+       
       </main>
 
       <footer>
