--- a/tienda.html
+++ b/tienda.html
@@ -17,9 +17,20 @@
       </header>
 
       <main>
-        <section class="productos">
-          <!-- Completar aquí con al menos 6 pasteles con imagen, nombre y precio -->
-        </section>
+        <section class="pasteles">
+          <div class="pastel">
+             <img src="imagenes/pastel1.jpg" alt="Pastel de Chocolate">
+             <h3>Pastel de Chocolate</h3>
+             <p>$12.99</p>
+          </div>
+          <div class="pastel">
+             <img src="imagenes/pastel2.jpg" alt="Pastel de Fresa">
+             <h3>Pastel de Fresa</h3>
+             <p>$10.99</p>
+          </div>
+          <!-- Repite esto para 6 pasteles -->
+       </section>
+       
       </main>
 
       <footer>
