CSS Y HTML actualizados

--- a/tienda.html
+++ b/tienda.html
@@ -8,7 +8,7 @@
   <body>
     <div class="container">
       <header>
-        <h1>Nuestros Pasteles</h1>
+        <h1>NUESTROS PASTELES</h1>
         <nav>
             <a href="index.html">Inicio</a>
             <a href="tienda.html">Tienda</a>
@@ -17,21 +17,40 @@
       </header>
 
       <main>
-        <section class="pasteles">
-          <div class="pastel">
-             <img src="imagenes/pastel1.jpg" alt="Pastel de Chocolate">
-             <h3>Pastel de Chocolate</h3>
-             <p>$12.99</p>
-          </div>
-          <div class="pastel">
-             <img src="imagenes/pastel2.jpg" alt="Pastel de Fresa">
-             <h3>Pastel de Fresa</h3>
-             <p>$10.99</p>
-          </div>
-          <!-- Repite esto para 6 pasteles -->
-       </section>
-       
-      </main>
+        <section class="pastel">
+           <div class="pastel">
+              <img src="imagenes/pastel1.jpg" alt="Pastel de Chocolate">
+              <h3>Pastelitos</h3>
+              <p>$12.99</p>
+           </div>
+           <div class="pastel">
+              <img src="imagenes/pastel2.jpg" alt="Pastel de Fresa">
+              <h3>Pastel de Frutas</h3>
+              <p>$10.99</p>
+           </div>
+           <div class="pastel">
+              <img src="imagenes/pastel3.jpg" alt="Pastel de Fresa">
+              <h3>Pasteles gourmets</h3>
+              <p>$11.99</p>
+           </div>
+           <div class="pastel">
+              <img src="imagenes/pastel4.jpg" alt="Pastel de Fresa">
+              <h3>Pastel de Fresa</h3>
+              <p>$15.99</p>
+           </div>
+           <div class="pastel">
+              <img src="imagenes/pastel5.jpg" alt="Pastel de Fresa">
+              <h3>Trozos Tradicionales</h3>
+              <p>$19.99</p>
+           </div>
+           <div class="pastel">
+              <img src="imagenes/pastel6.jpg" alt="Pastel de Fresa">
+              <h3>Especialidad de Casa</h3>
+              <p>$22.99</p>
+           </div>
+        </section>
+     </main>
+     
 
       <footer>
         <p>Visítanos y endulza tu día 🍰 © 2025 Dulce Sabor</p>
